# TransactionsTransfer

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
app/: __init__.py  __main__.py  google_sheets.py  tbank.py  transactions.py
